starting to troubleshoot spacing issue

--- a/starsProject/src/Components/Card/Card.css
+++ b/starsProject/src/Components/Card/Card.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
-  margin-right: 2%;
+  margin-right: 3%;
+  margin-bottom: 5rem;
 }
 
 .card-container {
