--- a/starsProject/src/Components/Landing/Landing.css
+++ b/starsProject/src/Components/Landing/Landing.css
@@ -2,7 +2,7 @@
 margin-top: 2.5rem;
 display: flex;
 gap: 3rem;
-padding: 3% 20% 7% 10%;
+padding: 3% 20% 2% 10%;
 font-size: 1.2rem;
 margin-right: 3rem;
 }
